--- a/docs/_posts/2021-09-25-hate.markdown
+++ b/docs/_posts/2021-09-25-hate.markdown
@@ -1,6 +1,6 @@
 ---
 layout: post
-title:  "Hate and leftists"
+title:  "Hate"
 date:   2021-09-25 18:42:00 +0300
 categories: posts
 ---
@@ -8,7 +8,7 @@ categories: posts
 If you love what belongs to you, you must hate whatever tries to take it away or destroy it. 
 
 
-This is why "hate" is the one forbidden thing on the left. They don't want you to own, they don't want you to love.
+This is why "hate" is the one forbidden thing on the left.
 
 
 Centrists will keep up a pretense of "rationality" when they should be filled with hate and rage for the destruction of love.
